add all sliders

--- a/src/index.html
+++ b/src/index.html
@@ -14,107 +14,110 @@
       <div class="swiper greet__slider">
        <div class="swiper-wrapper greet__slider-wrapper">
         <div class="swiper-slide greet__slide">
+         <div class="greet__video">
+          <video class="greet__video-inner" autoplay loop muted preload playsinline src="./files/video.mp4"></video>
+         </div>
          <div class="container">
           <div class="greet__slide-container">
            <div class="greet__cell"></div>
-           <div class="greet__cell m-title">
-            <h2 class="greet__title title"><span>РЖЕВ</span>МАШ</h2>
+           <div class="greet__cell m-title m-col-2">
+            <h2 class="greet__title title"><span>РЖЕВ</span><wbr>МАШ</h2>
            </div>
-           <div class="greet__cell m-panel">
+           <div class="greet__cell m-panel m-col-3">
             <div class="greet__slider-nav">
-             <button class="greet__slider-nav-btn">
+             <button data-greet="1" class="greet__slider-nav-btn j-active">
               <span class="greet__slider-nav-btn-num">01</span>
-              <span class="greet__slider-nav-btn-text">Пара слов о
-               нашей компании</span>
+              <span class="greet__slider-nav-btn-text">Пара слов о<br> нашей компании</span>
              </button>
-             <button class="greet__slider-nav-btn">
+             <button data-greet="2" class="greet__slider-nav-btn">
               <span class="greet__slider-nav-btn-num">02</span>
-              <span class="greet__slider-nav-btn-text">Мусоросортировочный
-               станция</span>
+              <span class="greet__slider-nav-btn-text">Мусоросортировочный<br> станция</span>
              </button>
-             <button class="greet__slider-nav-btn">
+             <button data-greet="3" class="greet__slider-nav-btn">
               <span class="greet__slider-nav-btn-num">03</span>
-              <span class="greet__slider-nav-btn-text">Мусороперегрузочная
-               станция</span>
+              <span class="greet__slider-nav-btn-text">Мусороперегрузочная<br> станция</span>
              </button>
             </div>
            </div>
            <div class="greet__cell"></div>
            <div class="greet__cell m-bottom"></div>
-           <div class="greet__cell m-bottom"></div>
-           <div class="greet__cell m-bottom">
+           <div class="greet__cell m-bottom m-info m-col-2">
+            <h3 class="greet__subtitle title"><span>Эффективные решения</span> в<br> области управления отходами</h3>
+            <p class="greet__text">Мы проектируем и строим мусоросортировочные комплексы, станции<br> мусороперегрузки, а также производим различное оборудование для сортировки и<br> переработки ТКО, предназначенное специально для российских условий<br> эксплуатации.</p>
+           </div>
+           <div class="greet__cell m-bottom m-btn m-col-3">
             <a href="#" class="greet__btn btn"><span>Узнать Подробнее</span><i></i></a>
            </div>
            <div class="greet__cell m-bottom"></div>
           </div>
          </div>
         </div>
-        <div class="swiper-slide greet__slide">
+        <div class="swiper-slide greet__slide m-2">
          <div class="container">
           <div class="greet__slide-container">
            <div class="greet__cell"></div>
-           <div class="greet__cell m-title">
-            <h2 class="greet__title title"><span>РЖЕВ</span>МАШ</h2>
+           <div class="greet__cell m-title m-col-2">
+            <h2 class="greet__title title m-min">Мусоро<span><wbr>сортировочный</span><br>комплекс</h2>
            </div>
-           <div class="greet__cell m-panel">
+           <div class="greet__cell m-panel m-col-3">
             <div class="greet__slider-nav">
-             <button class="greet__slider-nav-btn">
+             <button data-greet="1" class="greet__slider-nav-btn j-active">
               <span class="greet__slider-nav-btn-num">01</span>
-              <span class="greet__slider-nav-btn-text">Пара слов о
-               нашей компании</span>
+              <span class="greet__slider-nav-btn-text">Пара слов о<br> нашей компании</span>
              </button>
-             <button class="greet__slider-nav-btn">
+             <button data-greet="2" class="greet__slider-nav-btn">
               <span class="greet__slider-nav-btn-num">02</span>
-              <span class="greet__slider-nav-btn-text">Мусоросортировочный
-               станция</span>
+              <span class="greet__slider-nav-btn-text">Мусоросортировочный<br> станция</span>
              </button>
-             <button class="greet__slider-nav-btn">
+             <button data-greet="3" class="greet__slider-nav-btn">
               <span class="greet__slider-nav-btn-num">03</span>
-              <span class="greet__slider-nav-btn-text">Мусороперегрузочная
-               станция</span>
+              <span class="greet__slider-nav-btn-text">Мусороперегрузочная<br> станция</span>
              </button>
             </div>
            </div>
            <div class="greet__cell"></div>
            <div class="greet__cell m-bottom"></div>
-           <div class="greet__cell m-bottom"></div>
-           <div class="greet__cell m-bottom">
+           <div class="greet__cell m-bottom m-info m-col-2">
+            <h3 class="greet__subtitle title"><span>Комплекс по обработке коммунальных отходов</span><br> с высокой степенью механизации</h3>
+            <p class="greet__text">Оснащенн «открывателем пакетов» собственной разработки, барабанным грохотом,<br> магнитными сепараторами, пресс-компактором для остаточных фракции, а также<br> горизонтальным прессом для вторичного сырья.</p>
+           </div>
+           <div class="greet__cell m-bottom m-btn m-col-3">
             <a href="#" class="greet__btn btn"><span>Узнать Подробнее</span><i></i></a>
            </div>
            <div class="greet__cell m-bottom"></div>
           </div>
          </div>
         </div>
-        <div class="swiper-slide greet__slide">
+        <div class="swiper-slide greet__slide m-3">
          <div class="container">
           <div class="greet__slide-container">
            <div class="greet__cell"></div>
-           <div class="greet__cell m-title">
-            <h2 class="greet__title title"><span>РЖЕВ</span>МАШ</h2>
+           <div class="greet__cell m-title m-col-2">
+            <h2 class="greet__title title m-min">Мусоро<span><wbr>перегрузочная</span><br>Станция</h2>
            </div>
-           <div class="greet__cell m-panel">
+           <div class="greet__cell m-panel m-col-3">
             <div class="greet__slider-nav">
-             <button class="greet__slider-nav-btn">
+             <button data-greet="1" class="greet__slider-nav-btn j-active">
               <span class="greet__slider-nav-btn-num">01</span>
-              <span class="greet__slider-nav-btn-text">Пара слов о
-               нашей компании</span>
+              <span class="greet__slider-nav-btn-text">Пара слов о<br> нашей компании</span>
              </button>
-             <button class="greet__slider-nav-btn">
+             <button data-greet="2" class="greet__slider-nav-btn">
               <span class="greet__slider-nav-btn-num">02</span>
-              <span class="greet__slider-nav-btn-text">Мусоросортировочный
-               станция</span>
+              <span class="greet__slider-nav-btn-text">Мусоросортировочный<br> станция</span>
              </button>
-             <button class="greet__slider-nav-btn">
+             <button data-greet="3" class="greet__slider-nav-btn">
               <span class="greet__slider-nav-btn-num">03</span>
-              <span class="greet__slider-nav-btn-text">Мусороперегрузочная
-               станция</span>
+              <span class="greet__slider-nav-btn-text">Мусороперегрузочная<br> станция</span>
              </button>
             </div>
            </div>
            <div class="greet__cell"></div>
            <div class="greet__cell m-bottom"></div>
-           <div class="greet__cell m-bottom"></div>
-           <div class="greet__cell m-bottom">
+           <div class="greet__cell m-bottom m-info m-col-2">
+            <h3 class="greet__subtitle title"><span>Cтанция на пресс-компактор</span> RMZ PC40-360</h3>
+            <p class="greet__text">Предназначена для перегрузки отходов из мусоровозов в контейнер для<br> последующей перевозки на большегрузном транспорте (мультилифт). Бетонная или<br> сборно-разборная металлическая эстакада может быть оперативно смонтирована в<br> удобном месте. Разгрузка мусоровоза занимает от 3 до 10 минут, а заполнение<br> контейнера объемом 30 м3 за 40 минут. Может принять до 150 тонн отходов в смену.<br> Не требует строительства ангара, сложных бетонных работ.</p>
+           </div>
+           <div class="greet__cell m-bottom m-btn m-col-3">
             <a href="#" class="greet__btn btn"><span>Узнать Подробнее</span><i></i></a>
            </div>
            <div class="greet__cell m-bottom"></div>
@@ -129,7 +132,7 @@
        <div class="about__container">
         <div class="about__cell"></div>
         <div class="about__cell m-main">
-         <h2 class="about__title title"><span>Российский разработчик и производитель эффективных решений</span> в области управления отходами</h2>
+         <h2 class="about__title"><span>Российский разработчик и производитель эффективных решений</span> в области управления отходами</h2>
          <p class="about__text">Имея за плечами опыт создания собственного завода по рециклингу полимеров и находясь в постоянном контакте с нашими поставщиками сырья, мы как никто другой знаем все нюансы сбора и сортировки отходов. Нашим клиентам мы предлагаем как типовые решения с различной степенью механизации, так и сложнейшие автоматические сортировочные комплексы, разработанные по индивидуальным проектам.
           С 2010 года нами введено в эксплуатацию более 48 мусоросортировочных комплексов и мусороперегрузочных станций.</p>
          <a href="#" class="about__btn btn"><span>Узнать Подробнее</span><i></i></a>
@@ -165,7 +168,7 @@
        <div class="benefits__container">
         <div class="benefits__cell"></div>
         <div class="benefits__cell">
-         <h2 class="benefits__title title">Наши <span>преимущества</span></h2>
+         <h2 class="benefits__title">Наши <span>преимущества</span></h2>
          <div class="benefits__box">
           <div class="benefits__card">
            <div class="benefits__card-inner">
@@ -219,9 +222,9 @@
    </div>
 
    <div class="main-navigation">
-    <button class="main-navigation__btn"><i></i><span>Компания</span></button>
-    <button class="main-navigation__btn"><i></i><span>Кто мы</span></button>
-    <button class="main-navigation__btn"><i></i><span>Преимущества</span></button>
+    <button data-main="1" class="main-navigation__btn j-active"><i></i><span>Компания</span></button>
+    <button data-main="2" class="main-navigation__btn"><i></i><span>Кто мы</span></button>
+    <button data-main="3" class="main-navigation__btn"><i></i><span>Преимущества</span></button>
    </div>
    <i class="mouse-wheel"></i>
 
