--- a/src/index.html
+++ b/src/index.html
@@ -130,36 +130,32 @@
      <div class="swiper-slide main__slide about">
       <div class="container">
        <div class="about__container">
-        <div class="about__cell"></div>
-        <div class="about__cell m-main">
-         <h2 class="about__title"><span>Российский разработчик и производитель эффективных решений</span> в области управления отходами</h2>
+        <div class="about__cell m-left"></div>
+        <div class="about__cell m-main line-main">
+         <h2 class="about__title"><span>Российский разработчик и производитель<br> эффективных решений</span> в области управления отходами</h2>
          <p class="about__text">Имея за плечами опыт создания собственного завода по рециклингу полимеров и находясь в постоянном контакте с нашими поставщиками сырья, мы как никто другой знаем все нюансы сбора и сортировки отходов. Нашим клиентам мы предлагаем как типовые решения с различной степенью механизации, так и сложнейшие автоматические сортировочные комплексы, разработанные по индивидуальным проектам.
           С 2010 года нами введено в эксплуатацию более 48 мусоросортировочных комплексов и мусороперегрузочных станций.</p>
-         <a href="#" class="about__btn btn"><span>Узнать Подробнее</span><i></i></a>
+         <a href="#" class="about__btn btn m-dark"><span>Узнать Подробнее</span><i></i></a>
         </div>
-        <ul class="about__cell">
-         <li class="about__cell m-item">
-          <div class="about__item">
+        <div class="about__cell m-list">
+         <ul class="about__list">
+          <li class="about__item">
            <span class="about__item-num">01</span>
-           <span class="about__item-text">Полный цикл
+           <span class="about__item-text">Полный цикл<br>
             разработки</span>
-          </div>
-         </li>
-         <li class="about__cell m-item">
-          <div class="about__item">
+          </li>
+          <li class="about__item">
            <span class="about__item-num">02</span>
-           <span class="about__item-text">Пиндивидуальные
+           <span class="about__item-text">Пиндивидуальные<br>
             проекты</span>
-          </div>
-         </li>
-         <li class="about__cell m-item">
-          <div class="about__item">
+          </li>
+          <li class="about__item">
            <span class="about__item-num">03</span>
            <span class="about__item-text">42 Объекта</span>
-          </div>
-         </li>
-        </ul>
-        <div class="about__cell"></div>
+          </li>
+         </ul>
+        </div>
+        <div class="about__cell m-right"></div>
        </div>
       </div>
      </div>
