--- a/src/index.html
+++ b/src/index.html
@@ -159,50 +159,53 @@
        </div>
       </div>
      </div>
-     <div class="swiper-slide main__slide benefits">
+     <div class="swiper-slide main__slide swiper-no-mousewheel benefits">
       <div class="container">
        <div class="benefits__container">
         <div class="benefits__cell"></div>
-        <div class="benefits__cell">
+        <div class="benefits__cell m-main line-main">
          <h2 class="benefits__title">Наши <span>преимущества</span></h2>
          <div class="benefits__box">
           <div class="benefits__card">
+           <div class="benefits__card-bg"></div>
            <div class="benefits__card-inner">
             <div class="benefits__card-visual i-wrap">
-             <img class="benefits__card-visual-img i-full" src=" " alt="">
+             <img class="benefits__card-visual-img i-full" src="/src/img/benefit-1.png" alt="">
             </div>
             <div class="benefits__card-info">
-             <h3 class="benefits__card-title"><b>01</b> Техническая <span>экспертиза</span></h3>
+             <h3 class="benefits__card-title"><b>01</b> <span>Техническая <span>экспертиза</span></span></h3>
              <div class="benefits__card-text">
-              <p class="benefits__card-text-piece">РЖЕВМАШ — это, прежде всего, команда профессиональных инженеров. В своих разработках мы опираемся на опыт лучших мировых производителей, адаптируя его к российским реалиям.</p>
-              <p class="benefits__card-text-piece">Каждый проект проходит тщательную инженерную проработку с учетом имеющейся инфраструктуры и особенностей работы клиента. Вы можете быть уверены в том, что получите сбалансированное техническое решение, полностью отвечающее вашим потребностям.</p>
+              <p class="benefits__card-text-piece"><strong>РЖЕВМАШ — это, прежде всего, команда профессиональных инженеров.</strong> В своих разработках мы опираемся на опыт лучших мировых производителей, адаптируя его к российским реалиям.</p>
+              <p class="benefits__card-text-piece">Каждый проект проходит <strong>тщательную инженерную проработку с учетом имеющейся инфраструктуры</strong> и особенностей работы клиента. Вы можете быть уверены в том, что получите сбалансированное техническое решение, полностью отвечающее вашим потребностям.</p>
              </div>
             </div>
            </div>
           </div>
           <div class="benefits__card">
-           <div class="benefits__card-inner">
+           <div class="benefits__card-bg"></div>
+           <div class="benefits__card-inner m-reverse">
             <div class="benefits__card-visual i-wrap">
-             <img class="benefits__card-visual-img i-full" src=" " alt="">
+             <img class="benefits__card-visual-img i-full" src="/src/img/benefit-2.png" alt="">
             </div>
             <div class="benefits__card-info">
-             <h3 class="benefits__card-title"><b>02</b> Собственное <span>производство</span></h3>
+             <h3 class="benefits__card-title"><b>02</b> <span>Собственное <span>производство</span></span></h3>
              <div class="benefits__card-text">
-              <p class="benefits__card-text-piece">Наша производственная площадка – завод «РЖЕВМАШ» – располагается в Тверской области, всего в 3 часах езды от Москвы. Территория 14 га, площадь производственных площадей более 20 000 кв.м. Современный станочный парк, крупногабаритные покрасочные камеры, железнодорожные подъездные пути.</p>
+              <p class="benefits__card-text-piece"><strong>Наша производственная площадка – завод «РЖЕВМАШ» – располагается в Тверской области, всего в 3 часах езды от Москвы.</strong> Территория 14 га, площадь производственных площадей более 20 000 кв.м. Современный станочный парк, крупногабаритные покрасочные камеры, железнодорожные подъездные пути.</p>
               <p class="benefits__card-text-piece">Локализация производства в России не только позволяет снизить стоимость нашего оборудования по сравнению с зарубежными аналогами, но и существенно сокращает время ожидания для клиента.</p>
              </div>
             </div>
            </div>
           </div>
           <div class="benefits__card">
+           <div class="benefits__card-bg"></div>
            <div class="benefits__card-inner">
             <div class="benefits__card-visual i-wrap">
-             <img class="benefits__card-visual-img i-full" src=" " alt="">
+             <img class="benefits__card-visual-img i-full" src="/src/img/benefit-1.png" alt="">
             </div>
             <div class="benefits__card-info">
-             <h3 class="benefits__card-title"><b>03</b> Сервис и <span>обслуживание</span></h3>
+             <h3 class="benefits__card-title"><b>03</b> <span>Сервис и <span>обслуживание</span></span></h3>
              <div class="benefits__card-text">
-              <p class="benefits__card-text-piece">РЖЕВМАШ — это российское машиностроительное предприятие, а значит наши специалисты всегда рядом и могут выехать к заказчику для консультации или проведения технического обслуживания.</p>
+              <p class="benefits__card-text-piece"><strong>РЖЕВМАШ — это российское машиностроительное предприятие</strong>, а значит наши специалисты всегда рядом и могут выехать к заказчику для консультации или проведения технического обслуживания.</p>
               <p class="benefits__card-text-piece">Это выгодно отличает нас от западных производителей.</p>
              </div>
             </div>
@@ -225,6 +228,8 @@
    <i class="mouse-wheel"></i>
 
   </main>
+
+  <div class="cursor"></div>
 
   @@include('./components/_footer.html', {})
  </div>
